# geometry-DSL

./: CHANGELOG.md  build.cabal  readme.md  skeleton2025.cabal
app/: Main.hs  Main.hs.new
src/: Dibujo.hs  Interp.hs  Pred.hs
src/Basica/: Comun.hs  Ejemplo.hs  Escher.hs
test/: Spec.hs  SpecInterp.hs  SpecPred.hs
