cabal-version:      3.0
name:               build
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  hs-source-dirs:    src
  exposed-modules:   Dibujo, Interp, Pred, Basica.Ejemplo, Basica.Comun, Basica.Escher
  build-depends:
      base >= 4.17 && < 4.20,
      gloss ^>=1.13.2.2
  default-language:  Haskell2010

executable build
  hs-source-dirs:    app
  main-is:           Main.hs
  build-depends:
      base >= 4.17 && < 4.20,
      build,
      gloss ^>=1.13.2.2,
      hspec >=2.7.10,
      GLUT ^>= 2.7.0.16
  default-language:  Haskell2010

test-suite build-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:
      base >= 4.17 && < 4.20,
      build,
      hspec >=2.7.10,
      gloss ^>=1.13.2.2
  default-language:  Haskell2010

